--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "FreeRTOS-Kernel"]
 	path = FreeRTOS-Kernel
 	url = https://github.com/FreeRTOS/FreeRTOS-Kernel
+[submodule "Microvisor-HAL-STM32U5"]
+	path = Microvisor-HAL-STM32U5
+	url = https://github.com/korewireless/Microvisor-HAL-STM32U5
