--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,7 +20,8 @@ jobs:
       with:
         name: mv-freertos-native-demo-linux-native
         path: ${{ github.workspace }}/build/Demo/native_freertos_demo.*
-        if-no-files-found: error  build_mac_native:
+        if-no-files-found: error
+  build_mac_native:
     name: Build on macOS with native tooling
     runs-on: macos-latest
     steps:
